--- a/BobrovBurundukovLabFour/BobrovBurundukovLabFour/BobrovBurundukovLabFour.vcxproj.filters
+++ b/BobrovBurundukovLabFour/BobrovBurundukovLabFour/BobrovBurundukovLabFour.vcxproj.filters
@@ -15,8 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Лабораторная работа 4 БобровБурундуков.cpp">
+    <ClCompile Include="BobrovBurundukovLabFour.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Shapes.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="ShapeAccumulator.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
