--- a/BobrovBurundukovLabFour/BobrovBurundukovLabFour/BobrovBurundukovLabFour.vcxproj
+++ b/BobrovBurundukovLabFour/BobrovBurundukovLabFour/BobrovBurundukovLabFour.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b184feae-ce47-4abc-9e2a-2636118069d7}</ProjectGuid>
-    <RootNamespace>Лабораторнаяработа4БобровБурундуков</RootNamespace>
+    <ProjectGuid>{f7b2902c-2d7a-4b19-ba62-7ffa5f3948c8}</ProjectGuid>
+    <RootNamespace>BobrovBurundukovLabFour</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Лабораторная работа 4 БобровБурундуков.cpp" />
+    <ClCompile Include="BobrovBurundukovLabFour.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ShapeAccumulator.h" />
+    <ClInclude Include="Shapes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
